--- a/.github/workflows/kernel-a14-6.1.yml
+++ b/.github/workflows/kernel-a14-6.1.yml
@@ -67,10 +67,10 @@ jobs:
           #  os_patch_level: "2025-01"
           # - sub_level: "124"
           #   os_patch_level: "2025-02"
-          - sub_level: "145"
-            os_patch_level: "2025-08"
-          - sub_level: "145"
-            os_patch_level: "2025-09"
+          # - sub_level: "145"
+          #   os_patch_level: "2025-08"
+          # - sub_level: "145"
+          #   os_patch_level: "2025-09"
           #- sub_level: "128"
           #  os_patch_level: "2025-03"
           #- sub_level: "129"
