--- a/.github/workflows/kernel-a14-6.1.yml
+++ b/.github/workflows/kernel-a14-6.1.yml
@@ -27,16 +27,25 @@ on:
         required: true
         type: boolean
         default: true
+      use_bbg:
+        description: '是否开启BBG防格机补丁?'
+        required: true
+        type: boolean
+        default: true
       use_kpm:
         description: '是否开启KPM功能?'
         required: true
         type: boolean
         default: true
-      BBG:
-        description: '是否启用内核层面阻止对关键分区/设备节点的非法写入(LSM)？'
-        required: true
+      onlyAk3:
+        description: '仅上传AK3压缩包?(无boot,下载更快)'
+        required: false
         type: boolean
         default: false
+      build_time:
+        description: '设置内核构建时间(格式见仓库说明)'
+        required: false
+        type: string
 
 jobs:
   build-kernel-a14-6-1-kernelsu-susfs:
@@ -44,48 +53,10 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          #- sub_level: "25"
-          #  os_patch_level: "2023-10"
-          #- sub_level: "43"
-          #  os_patch_level: "2023-11"
-          #- sub_level: "57"
-          #  os_patch_level: "2024-01"
-          #- sub_level: "68"
-          #  os_patch_level: "2024-03"
-          #- sub_level: "75"
-          #  os_patch_level: "2024-05"
-          # - sub_level: "78"
-          #   os_patch_level: "2024-06"
-          #- sub_level: "84"
-          #  os_patch_level: "2024-07"
-          # - sub_level: "90"
-          #   os_patch_level: "2024-08"
-          #- sub_level: "93"
-          #  os_patch_level: "2024-09"
-          # - sub_level: "99"
-          #   os_patch_level: "2024-10"
-          #- sub_level: "112"
-          #  os_patch_level: "2024-11"
-          #- sub_level: "115"
-          #  os_patch_level: "2024-12"
-          #- sub_level: "118"
-          #  os_patch_level: "2025-01"
-          # - sub_level: "124"
-          #   os_patch_level: "2025-02"
-          # - sub_level: "145"
-          #   os_patch_level: "2025-08"
-          # - sub_level: "145"
-          #   os_patch_level: "2025-09"
-          #- sub_level: "128"
-          #  os_patch_level: "2025-03"
-          #- sub_level: "129"
-          #  os_patch_level: "2025-04"
-          #- sub_level: "134"
-          #  os_patch_level: "2025-05"
           - sub_level: "157"
             os_patch_level: "2025-12"
-          #- sub_level: "X"
-          #  os_patch_level: "lts"
+          # - sub_level: "X"
+          #   os_patch_level: "lts"
     uses: ./.github/workflows/gki-kernel.yml
     secrets: inherit
     with:
@@ -98,6 +69,8 @@ jobs:
       kernelsu_branch: ${{ inputs.kernelsu_branch || 'Dev' }}
       version: ${{ inputs.version || '' }}
       use_zram: ${{ inputs.use_zram }}
+      use_bbg: ${{ inputs.use_bbg }}
       use_kpm: ${{ inputs.use_kpm }}
       supp_op: ${{ inputs.supp_op || false }}
-      BBG: ${{ inputs.BBG || false }}
+      onlyAk3: ${{ inputs.onlyAk3 || false }}
+      build_time: ${{ inputs.build_time || '' }}
