--- a/.github/workflows/gki-kernel.yml
+++ b/.github/workflows/gki-kernel.yml
@@ -49,6 +49,10 @@ on:
         required: true
         type: boolean
         default: true
+      use_hymofs:
+        required: true
+        type: boolean
+        default: false
       supp_op:
         required: true
         type: boolean
@@ -380,7 +384,7 @@ jobs:
             patch -p1 < fdinfo.c.patch
           fi
 
-          if [ "$FORMATTED_BRANCH" == "android14-6.1" ]; then
+          if [ inputs.use_hymofs && "$FORMATTED_BRANCH" == "android14-6.1" ]; then
             wget https://raw.githubusercontent.com/Anatdx/HymoFS/refs/heads/android14_6.1/patch/hymofs_with_susfs.patch
             patch -p1 -F 3 < hymofs_with_susfs.patch
             echo "CONFIG_HYMOFS=y" >> ./arch/arm64/configs/gki_defconfig
