--- a/.github/workflows/kernel-a14-6.1.yml
+++ b/.github/workflows/kernel-a14-6.1.yml
@@ -37,11 +37,16 @@ on:
         required: true
         type: boolean
         default: true
+      use_hymofs:
+        description: '是否开启HymoFS?'
+        required: true
+        type: boolean
+        default: false
       onlyAk3:
         description: '仅上传AK3压缩包?(无boot,下载更快)'
         required: false
         type: boolean
-        default: false
+        default: true
       build_time:
         description: '设置内核构建时间(格式见仓库说明)'
         required: false
@@ -71,6 +76,7 @@ jobs:
       use_zram: ${{ inputs.use_zram }}
       use_bbg: ${{ inputs.use_bbg }}
       use_kpm: ${{ inputs.use_kpm }}
+      use_hymofs: ${{ inputs.use_hymofs }}
       supp_op: ${{ inputs.supp_op || false }}
       onlyAk3: ${{ inputs.onlyAk3 || false }}
       build_time: ${{ inputs.build_time || '' }}
