--- a/.github/workflows/kernel-a14-6.1.yml
+++ b/.github/workflows/kernel-a14-6.1.yml
@@ -21,7 +21,7 @@ on:
       version:
         required: false
         type: string
-        default: ""
+        default: "-android14-11-ga2521ca27699-ab13294383"
       use_zram:
         description: '是否开启增加更多ZRAM算法?'
         required: true
