--- a/.github/workflows/build-kernel-a14-6-1.yml
+++ b/.github/workflows/build-kernel-a14-6-1.yml
@@ -30,6 +30,7 @@ on:
         description: '自定义版本名(如6.1.93后面的字符/留空则使用默认版本号)'
         required: false
         type: string
+        default: "-android14-11-ga2521ca27699-ab13294383"
       build_time:
         description: '设置内核构建时间(格式见仓库说明)'
         required: false
@@ -49,6 +50,11 @@ on:
         required: true
         type: boolean
         default: true
+      use_hymofs:
+        description: '是否开启HymoFS?'
+        required: true
+        type: boolean
+        default: false
       get_manager:
         description: '获取最新KSU管理器和SUS模块?'
         required: true
@@ -58,7 +64,7 @@ on:
         description: '仅上传AK3压缩包?(无boot,下载更快)'
         required: false
         type: boolean
-        default: false
+        default: true
 
 jobs:
 
@@ -73,6 +79,7 @@ jobs:
       use_zram: ${{ inputs.use_zram }}
       use_bbg: ${{ inputs.use_bbg }}
       use_kpm: ${{ inputs.use_kpm }}
+      use_hymofs: ${{ inputs.use_hymofs }}
       onlyAk3: ${{ inputs.onlyAk3 }}
       build_time: ${{ inputs.build_time }}
   get-ksu-manager:
